--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@testing-library/user-event": "^7.1.2",
     "@tweenjs/tween.js": "^18.6.0",
     "classnames": "2.2.6",
+    "glsl-util": "git://github.com/ykob/glsl-util.git",
+    "glslify-loader": "^2.0.0",
     "history": "4.10.1",
     "js-util": "git://github.com/ykob/js-util.git",
     "moment": "^2.27.0",
     "perfect-scrollbar": "1.5.0",
     "prop-types": "15.7.2",
+    "raw-loader": "^4.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "5.2.0",
