messing up the project

--- a/package.json
+++ b/package.json
@@ -36,7 +36,15 @@
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
     "glsl-util": "git://github.com/ykob/glsl-util.git",
+    "glslify": "^7.0.0",
     "glslify-loader": "^2.0.0",
+    "easing-js": "git://github.com/danro/easing-js.git",
+    "gl-matrix": "^3.1.0",
+    "glsl-easings": "^1.0.0",
+    "glsl-force": "git://github.com/ykob/glsl-force.git",
+    "glsl-inverse": "^1.0.0",
+    "glsl-matrix": "git://github.com/ykob/glsl-matrix.git",
+    "glsl-noise": "0.0.0",
     "history": "4.10.1",
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
