--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
+    "joi-browser": "^13.4.0",
+    "joi-phone-number": "^5.0.0",
     "js-util": "git://github.com/ykob/js-util.git",
     "mini-css-extract-plugin": "0.9.0",
     "moment": "^2.27.0",
